--- a/WeatherGift/Base.lproj/Main.storyboard
+++ b/WeatherGift/Base.lproj/Main.storyboard
@@ -93,13 +93,72 @@
                                     <constraint firstAttribute="height" constant="225" id="IHa-VU-O42"/>
                                 </constraints>
                             </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="24d-1d-94j">
+                                <rect key="frame" x="0.0" y="225" width="320" height="299"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" rowHeight="80" id="Fcl-ye-1zK" customClass="DailyTableViewCell" customModule="WeatherGift" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="320" height="80"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Fcl-ye-1zK" id="Wt4-ik-YME">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="clear-day" translatesAutoresizingMaskIntoConstraints="NO" id="deL-yC-OKB">
+                                                    <rect key="frame" x="16" y="5" width="70" height="70"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Bloomsday" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qOj-go-hQM">
+                                                    <rect key="frame" x="94" y="5" width="176" height="31"/>
+                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="22"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="188°" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WOt-AD-Bvn">
+                                                    <rect key="frame" x="259" y="5" width="51" height="31"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="22"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" editable="NO" text="Rain, rain, go away. Come back another day!" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tmR-pd-3Wh">
+                                                    <rect key="frame" x="94" y="32" width="176" height="48"/>
+                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <color key="textColor" systemColor="labelColor"/>
+                                                    <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="14"/>
+                                                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                                </textView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="-88°" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fOV-1d-9bn">
+                                                    <rect key="frame" x="259" y="32" width="51" height="31"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="18"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="dailyHighLabel" destination="WOt-AD-Bvn" id="nsT-eB-Bl8"/>
+                                            <outlet property="dailyImageView" destination="deL-yC-OKB" id="vPs-Ge-JrE"/>
+                                            <outlet property="dailyLowLabel" destination="fOV-1d-9bn" id="fmg-h7-eZX"/>
+                                            <outlet property="dailySummaryView" destination="tmR-pd-3Wh" id="1j3-CW-8gg"/>
+                                            <outlet property="dailyWeekdayLabel" destination="qOj-go-hQM" id="L2s-Fo-T1g"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="1mQ-R9-FoE"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="1mQ-R9-FoE" firstAttribute="trailing" secondItem="24d-1d-94j" secondAttribute="trailing" id="8Gh-0g-n8H"/>
+                            <constraint firstItem="24d-1d-94j" firstAttribute="leading" secondItem="1mQ-R9-FoE" secondAttribute="leading" id="8wF-Wj-7h0"/>
                             <constraint firstItem="8ks-yC-QVQ" firstAttribute="top" secondItem="1mQ-R9-FoE" secondAttribute="top" id="Ioc-qk-rsD"/>
                             <constraint firstItem="8ks-yC-QVQ" firstAttribute="leading" secondItem="1mQ-R9-FoE" secondAttribute="leading" id="Ixf-9K-yJL"/>
                             <constraint firstItem="AXu-0Q-MTq" firstAttribute="bottom" secondItem="1mQ-R9-FoE" secondAttribute="bottom" id="Yt8-Dr-WeC"/>
+                            <constraint firstItem="AXu-0Q-MTq" firstAttribute="top" secondItem="24d-1d-94j" secondAttribute="bottom" id="fEP-jy-IgS"/>
+                            <constraint firstItem="24d-1d-94j" firstAttribute="top" secondItem="8ks-yC-QVQ" secondAttribute="bottom" id="j9S-8M-J6v"/>
                             <constraint firstItem="AXu-0Q-MTq" firstAttribute="leading" secondItem="1mQ-R9-FoE" secondAttribute="leading" id="u1l-kJ-QGW"/>
                             <constraint firstItem="1mQ-R9-FoE" firstAttribute="trailing" secondItem="8ks-yC-QVQ" secondAttribute="trailing" id="wCH-WN-bcR"/>
                             <constraint firstItem="AXu-0Q-MTq" firstAttribute="trailing" secondItem="1mQ-R9-FoE" secondAttribute="trailing" id="yyi-J8-YkI"/>
@@ -111,6 +170,7 @@
                         <outlet property="pageControl" destination="sIQ-ve-Q3D" id="gWt-PP-akm"/>
                         <outlet property="placeLabel" destination="WV8-rk-qmn" id="cVi-rs-ck5"/>
                         <outlet property="summaryLabel" destination="LIM-LM-ykb" id="eF9-6R-Q4W"/>
+                        <outlet property="tableView" destination="24d-1d-94j" id="IgF-sX-RMQ"/>
                         <outlet property="temperatureLabel" destination="JWn-SH-rv0" id="kHc-hd-X40"/>
                     </connections>
                 </viewController>
@@ -204,7 +264,11 @@
         </scene>
     </scenes>
     <resources>
+        <image name="clear-day" width="512" height="512"/>
         <image name="list.bullet" catalog="system" width="128" height="88"/>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
