--- a/WeatherGift/Base.lproj/Main.storyboard
+++ b/WeatherGift/Base.lproj/Main.storyboard
@@ -5,6 +5,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -94,7 +95,7 @@
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="24d-1d-94j">
-                                <rect key="frame" x="0.0" y="225" width="320" height="299"/>
+                                <rect key="frame" x="0.0" y="295" width="320" height="229"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" rowHeight="80" id="Fcl-ye-1zK" customClass="DailyTableViewCell" customModule="WeatherGift" customModuleProvider="target">
@@ -148,23 +149,77 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="fIG-rM-Ptp">
+                                <rect key="frame" x="0.0" y="225" width="320" height="70"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="70" id="LXK-CX-PtN"/>
+                                </constraints>
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="e7z-3H-KPo">
+                                    <size key="itemSize" width="70" height="70"/>
+                                    <size key="estimatedItemSize" width="70" height="70"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="HourlyCell" id="wTD-d9-VDL" customClass="HourlyCollectionViewCell" customModule="WeatherGift" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="70" height="70"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="uqf-c1-b0i">
+                                            <rect key="frame" x="0.0" y="0.0" width="70" height="70"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="13PM" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aec-v3-aMB">
+                                                    <rect key="frame" x="0.0" y="0.0" width="70" height="22"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="16"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="100°" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4OZ-Um-p8g">
+                                                    <rect key="frame" x="0.0" y="48" width="70" height="22"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="16"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="cloud" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="gwD-LP-YxU">
+                                                    <rect key="frame" x="20" y="20" width="30" height="30"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <color key="tintColor" systemColor="labelColor"/>
+                                                </imageView>
+                                            </subviews>
+                                        </collectionViewCellContentView>
+                                        <connections>
+                                            <outlet property="hourLabel" destination="aec-v3-aMB" id="BUf-ER-SzE"/>
+                                            <outlet property="hourlyTemperature" destination="4OZ-Um-p8g" id="q0L-4k-LNx"/>
+                                            <outlet property="iconImageView" destination="gwD-LP-YxU" id="51z-Xq-GHa"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="1mQ-R9-FoE"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="1mQ-R9-FoE" firstAttribute="trailing" secondItem="24d-1d-94j" secondAttribute="trailing" id="8Gh-0g-n8H"/>
                             <constraint firstItem="24d-1d-94j" firstAttribute="leading" secondItem="1mQ-R9-FoE" secondAttribute="leading" id="8wF-Wj-7h0"/>
+                            <constraint firstItem="fIG-rM-Ptp" firstAttribute="top" secondItem="8ks-yC-QVQ" secondAttribute="bottom" id="Ci7-jy-GBS"/>
                             <constraint firstItem="8ks-yC-QVQ" firstAttribute="top" secondItem="1mQ-R9-FoE" secondAttribute="top" id="Ioc-qk-rsD"/>
                             <constraint firstItem="8ks-yC-QVQ" firstAttribute="leading" secondItem="1mQ-R9-FoE" secondAttribute="leading" id="Ixf-9K-yJL"/>
                             <constraint firstItem="AXu-0Q-MTq" firstAttribute="bottom" secondItem="1mQ-R9-FoE" secondAttribute="bottom" id="Yt8-Dr-WeC"/>
                             <constraint firstItem="AXu-0Q-MTq" firstAttribute="top" secondItem="24d-1d-94j" secondAttribute="bottom" id="fEP-jy-IgS"/>
-                            <constraint firstItem="24d-1d-94j" firstAttribute="top" secondItem="8ks-yC-QVQ" secondAttribute="bottom" id="j9S-8M-J6v"/>
+                            <constraint firstItem="fIG-rM-Ptp" firstAttribute="trailing" secondItem="1mQ-R9-FoE" secondAttribute="trailing" id="h2o-wI-1ec"/>
+                            <constraint firstItem="24d-1d-94j" firstAttribute="top" secondItem="fIG-rM-Ptp" secondAttribute="bottom" id="j9S-8M-J6v"/>
                             <constraint firstItem="AXu-0Q-MTq" firstAttribute="leading" secondItem="1mQ-R9-FoE" secondAttribute="leading" id="u1l-kJ-QGW"/>
                             <constraint firstItem="1mQ-R9-FoE" firstAttribute="trailing" secondItem="8ks-yC-QVQ" secondAttribute="trailing" id="wCH-WN-bcR"/>
+                            <constraint firstItem="fIG-rM-Ptp" firstAttribute="leading" secondItem="1mQ-R9-FoE" secondAttribute="leading" id="y3H-d2-3oS"/>
                             <constraint firstItem="AXu-0Q-MTq" firstAttribute="trailing" secondItem="1mQ-R9-FoE" secondAttribute="trailing" id="yyi-J8-YkI"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="collectionView" destination="fIG-rM-Ptp" id="5be-9T-0CZ"/>
                         <outlet property="dateLabel" destination="A8r-J3-wdN" id="r0t-cB-89b"/>
                         <outlet property="imageView" destination="rqA-SF-vzQ" id="e5z-H1-SRU"/>
                         <outlet property="pageControl" destination="sIQ-ve-Q3D" id="gWt-PP-akm"/>
@@ -265,6 +320,7 @@
     </scenes>
     <resources>
         <image name="clear-day" width="512" height="512"/>
+        <image name="cloud" catalog="system" width="128" height="87"/>
         <image name="list.bullet" catalog="system" width="128" height="88"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
